configured swaggo
